# saarthi

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.py  config.py  config.yml  docker-compose.yml  log_conf.yml  pyproject.toml
app/: __init__.py  auth.py  config.py  core.py  errors.py  main.py  models.py
app/api/: schemas.py
app/api/routers/: geofence.py  health.py  me.py
app/config/: __init__.py  config.example.py  config.py  settings.py
app/dependencies/: auth.py  config.py
app/routers/: chat.py  geofence.py  health.py  login.py
app/services/: agents.py  connectivity.py  email.py  geofence.py  geofence_engine.py  instructions.py  location.py  tools.py  trackcrow_transactions.py
app/services/cloudflare/: __init__.py  client.py
app/services/google_tasks/: __init__.py  client.py
app/services/shikari/: __init__.py  constants.py  loader.py  plots.py  runner.py
app/utils/: configuration.py  limiter.py  logging.py  ntfy.py  timezone.py
docs/: README.md  api.md  architecture.md  deployment.md  mcp.md  scripts.md
mcp-server/: server.py
scripts/: __init__.py
scripts/backup-dbs/: backup.py
scripts/backup-gdrive/: backup.py
scripts/backup_dbs/: __init__.py  main.py
scripts/backup_gdrive/: __init__.py  main.py
scripts/cloudflare/: __init__.py  cli.py
scripts/cloudflare_dns/: __init__.py  main.py
scripts/cloudflare_zones/: __init__.py  main.py
scripts/google_tasks_auth/: __init__.py  main.py
scripts/manual/: whatsapp_helper.py
scripts/restore_dbs_test/: __init__.py  main.py
scripts/schedule-scripts/: config.json  main.py
scripts/schedule_scripts/: __init__.py  config.json  main.py
scripts/shikari_visualize/: __init__.py  main.py
shared/: __init__.py  constants.py  local_config.py  settings.py
shared/config/: __init__.py  env.py
shared/logging/: __init__.py  setup.py
shared/notifications/: email.py  ntfy.py  whatsapp.py
tests/: conftest.py  test_cloudflare_service.py  test_config.py  test_geofence.py  test_geofence_engine.py  test_geofence_service.py  test_google_tasks_service.py  test_health.py  test_mcp_server.py  test_me_location.py  test_notification_clients.py  test_openapi.py  test_scripts.py  test_shikari_visualize.py  test_trackcrow_transactions.py  test_whatsapp_notifications.py
