[project]
name = "saarthi"
version = "0.1.0"
description = "SAARTHI - Smart Aide for Actions, Retrieval, Tasks, Handling Information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.0",
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.2",
]

[project.scripts]
backup-dbs = "scripts.backup_dbs.main:main"
backup-gdrive = "scripts.backup_gdrive.main:main"
schedule-scripts = "scripts.schedule_scripts.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "shared*", "scripts*"]
exclude = ["logs*", "tests*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
