[project]
name = "saarthi"
version = "0.1.0"
description = "SAARTHI - Smart Aide for Actions, Retrieval, Tasks, Handling Information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.0",
    "fastapi>=0.115.12",
    "kaleido>=1.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "tzdata>=2025.2",
    "uvicorn>=0.34.2",
]

[project.scripts]
backup-dbs = "scripts.backup_dbs.main:main"
backup-gdrive = "scripts.backup_gdrive.main:main"
schedule-scripts = "scripts.schedule_scripts.main:main"
shikari-visualize = "scripts.shikari_visualize.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "shared*", "scripts*"]
exclude = ["logs*", "tests*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
